@@ -1,3 +1,8 @@
+Fri Aug 15 13:21:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Chats in the buddy list now get icons.
+
 Fri Aug 15 13:19:15 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
